--- a/index.html
+++ b/index.html
@@ -4,13 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Architects website</title>
-    <link rel="stylesheet" href="architects.css">
+    <link rel="stylesheet" href="./architects.css">
 </head>
 <body class="work-sans-font">
-<header>
-    <nav class="navbar">
-<h3>G3 Architects</h2>
+<header class="bg-light">
+    <nav class="navbar display-flex">
+        <h3 class="brand">G3 Architects</h3>
+         <ul class="nav-links display-flex">    
+            <li class="nav-item"><a href="" class="nav-link text-gray"></a> Home </li>
+            <li class="nav-item"><a href="" class="nav-link text-gray">About</a></li>
+            <li class="nav-item"><a href="" class="nav-link text-gray"> Contact Us   </a></li>
+            <li class="nav-item"><a href="" class="nav-link text-gray">Login</a></li>
+         </ul>
     </nav>
+    <div class="banner">
+        <div class="banner-conent">
+        <h1 class="banner-tilte">Brand New 
+            <br>
+              Group of Architects 
+        </h1>
+        <p class="banner-details">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+        <button class="btn">Explore More</button></div>
+        <img class="banner-image"  src="./images/banner.png" alt="" >
+    </div>
 </header>
 <main>
 
